<resources>
    <string name="app_name">SignUpScreen_ExplicitIntent</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_age">Enter Age</string>
    <string name="select_gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="hobbies">Hobbies</string>
    <string name="reading">Reading</string>
    <string name="traveling">Traveling</string>
    <string name="sports">Sports</string>
    <string name="submit">Submit</string>
    <string name="data">DATA</string>
</resources>